--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ dl862@cornell.edu
 
 
 <div class="pv1" id="ccgp">
-  <h3>AI-Driven Health Monitoring in Animals</h3>
+  <h3>AI for Agricultural Animals</h3>
 
-  <p> One of my primary research programs focuses on using AI models (machine and deep learning) to improve health prediction and monitoring in dairy cows. I have developed predictive models that leverage wearable sensor time-series (e.g., activity, rumination) and milk FTIR spectra to detect early signs of key health events and postpartum diseases in Holstein cows, including pregnancy loss, metritis, and mastitis. These efforts aim to support non-invasive, data-driven decision-making in dairy herd management and enhance early intervention strategies. Check our key publications:</p>
+  <p> One of my primary research programs focuses on using AI models (machine and deep learning) to improve health prediction and monitoring for an important Agricultural Animal - dairy cows. I have developed predictive models that leverage wearable sensor time-series (e.g., activity, rumination) and milk FTIR spectra to detect early signs of key health events and postpartum diseases in Holstein cows, including pregnancy loss, metritis, and mastitis. These efforts aim to support non-invasive, data-driven decision-making in dairy herd management and enhance early intervention strategies. Check our key publications:</p>
 
   <table class="pub-table">
 	<tr>
@@ -120,10 +120,67 @@ dl862@cornell.edu
 	</tr>
   </table>
 
+	<div class="pv1" id="ccgp">
+		<h3>AI for Generalized Digital Health </h3>
+	  
+		<p> Expanding AI from single-species tasks to universal multi-species health is the next frontier. To overcome the invasiveness of traditional testing, we combine non-invasive sensing with generative AI and foundation AI. I (co-)developed a chest radiography foundation model for human, a wearable diffusion generative framework for both human and livestock, and a non-invasive fecal microbiome pipeline for domestic mammals, moving beyond simple prediction to data generation and deep disease profiling. Check our key publications:</p>
+
+		<p style="font-size: 0.98em; color: #888; margin-top: -10px; margin-bottom: 18px;">(# equal contribution)</p>
+	  
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/chex.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, et al., Ping Luo, Ruijiang Li. (2025).
+				</span>
+				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
+				<i class="pub-highlight">NEJM AI</i>
+				<span class="pub-status">[In revision]</span>
+				[<a href="https://arxiv.org/abs/2509.03903">preprint</a>]
+			  </td>
+			</tr>
+		  </table>
+
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/animal_microbiome.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+					<i class="pub-highlight">Dan Lin#</i>, Erika Ganda, et al., Jessica McArt. (2026).
+				</span>
+				<span class="pub-title">Toward diseases-associated fecal microbiome signatures for domestic mammals</span><br>
+				<i class="pub-highlight">Communications Biology</i>
+				<span class="pub-status">[Under review]</span>
+			  </td>
+			</tr>
+		  </table>
+		
+		<table class="pub-table">
+			<tr>
+			  <td class="pub-img">
+				<img src="pic/gan.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
+			  </td>
+			  <td class="pub-info">
+				<span class="pub-authors">
+				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li. (2025).
+				</span>
+				<span class="pub-title">SynLS: A novel diffusion-transformer framework for generating high-quality wearable sensor time series data to enhance health monitoring</span><br>
+				<i class="pub-highlight">biorxiv</i>
+				<span class="pub-status">[In preparation]</span>
+				[<a href="https://www.biorxiv.org/content/10.1101/2025.05.11.653212v1">preprint</a>]
+			  </td>
+			</tr>
+		  </table>
+
   <div class="pv1" id="ccgp">
-	<h3>Genomic and Microbiome Insights into Animal's Adaptation and Health</h3>
+	<h3>Collaborative Research in Computational Biology & Health Informatics</h3>
   
-	<p> With a background in bioinformatics, I have contributed to several projects that explore the genomic and microbiome underpinnings of host traits and disease susceptibility, including uncovering recent adaptive evolution in the high-altitude Himalayan honeybee (Apis laboriosa) through comparative genomics, as well as characterizing gut microbiome responses in mice to probiotics and dietary compounds in controlled experimental models. Check our key publications:</p>
+	<p> Beyond my primary focus, I have contributed to collaborative research applying bioinformatics and AI across diverse domains. These include genomic and microbiome studies on honeybee adaptation and gut health, as well as developing intelligent diagnostic tools for bone age assessment, keratoconus, and fall detection. These projects showcase my ability to leverage computational models to solve varied biological and clinical problems. Check our key publications:</p>
   
 	<table class="pub-table">
 		<tr>
@@ -164,58 +221,14 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-				Kwun Kwan Lo, Junsheng He, <i class="pub-highlight">Dan Lin</i>, Felicianna, Hoi Kit Matthew Leung, Fangfei Zhang, Marsena Jasiel Ismaiah, Hani El-Nezami, Jun Li. (2025).
+				Kwun Kwan Lo, Junsheng He, <i class="pub-highlight">Dan Lin</i>, et al., Jun Li. (2025).
 			</span>
 			<span class="pub-title">Theabrownin-induced Bifidobacterium pseudolongum enrichment mitigates experimental colitis in mice</span><br>
-			<i class="pub-highlight">npj Science of Food</i>
-			<span class="pub-status">[In revision]</span>
+			<i class="pub-highlight">mSysyems</i>
+			<span class="pub-status">[Under review]</span>
 		  </td>
 		</tr>
 	  </table>
-
-	<div class="pv1" id="ccgp">
-		<h3>Generative Modeling of Sensor and Imaging Data for Clinical Decision Support</h3>
-	  
-		<p> My recent work focuses on generative AI—especially diffusion and transformer models—for synthesizing biomedical and wearable sensor data. I developed SynLS, a diffusion-transformer framework that generates realistic livestock activity time series to support disease prediction. In parallel, I co-led the development of a generative foundation model for chest radiography, enabling zero-shot clinical tasks from large-scale medical imaging. Together, these projects reflect my broader interest in building cross-domain generative systems for physiological and clinical data. Check our key publications:</p>
-
-		<p style="font-size: 0.98em; color: #888; margin-top: -10px; margin-bottom: 18px;">(# equal contribution)</p>
-	  
-		<table class="pub-table">
-			<tr>
-			  <td class="pub-img">
-				<img src="pic/chex.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
-			  </td>
-			  <td class="pub-info">
-				<span class="pub-authors">
-					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, Lu Zhang, Wenhui Zhou, Congjian Ge, Ruihang Chu, Xiaoli Yang, Junhan Zhao, Junsong Chen, Xiangde Luo, Sen Yang, Jin Fang, Ping Luo, Ruijiang Li. (2025).
-				</span>
-				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
-				<i class="pub-highlight">NEJM AI</i>
-				<span class="pub-status">[In revision]</span>
-			  </td>
-			</tr>
-		  </table>
-		
-		<table class="pub-table">
-			<tr>
-			  <td class="pub-img">
-				<img src="pic/gan.png" width="185px" height = "100" style="box-shadow: 2px 2px 6px #888; border-radius: 6px;">
-			  </td>
-			  <td class="pub-info">
-				<span class="pub-authors">
-				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li. (2025).
-				</span>
-				<span class="pub-title">SynLS: A novel diffusion-transformer framework for generating high-quality wearable sensor time series data to enhance health monitoring</span><br>
-				<i class="pub-highlight">biorxiv</i>
-				<span class="pub-status">[In preparation]</span>
-				[<a href="https://www.biorxiv.org/content/10.1101/2025.05.11.653212v1">preprint</a>][<a href="https://huggingface.co/spaces/danlin1128/synls">project website</a>]
-			  </td>
-			</tr>
-		  </table>
-
-
-	<div class="pv1" id="ccgp">
-		<h3>Previous work during my undergraduate studies</h3>
 	  
 		<table class="pub-table">
 			<tr>
