Update publication details and last updated date

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ dl862@cornell.edu
 
   <p> One of my primary research programs focuses on using AI models (machine and deep learning) to improve health prediction and monitoring for an important Agricultural Animal - dairy cows. I have developed predictive models that leverage wearable sensor time-series (e.g., activity, rumination) and milk FTIR spectra to detect early signs of key health events and postpartum diseases in Holstein cows, including pregnancy loss, metritis, and mastitis. These efforts aim to support non-invasive, data-driven decision-making in dairy herd management and enhance early intervention strategies. Check our key publications:</p>
 
+  <p style="font-size: 0.98em; color: #888; margin-top: -10px; margin-bottom: 18px;">(# equal contribution， * corresponding author)</p>
+	
   <table class="pub-table">
 	<tr>
 	  <td class="pub-img">
@@ -78,7 +80,7 @@ dl862@cornell.edu
 	  </td>
 	  <td class="pub-info">
 		<span class="pub-authors">
-		  <i class="pub-highlight">Dan Lin</i>, Jessica McArt. (2025).
+		  <i class="pub-highlight">Dan Lin</i>, Jessica McArt*. (2025).
 		</span>
 		<span class="pub-title">Prediction and classification of metritis and mastitis in Holstein cows using transition milk spectra under different modeling strategies</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
@@ -94,7 +96,7 @@ dl862@cornell.edu
 	  </td>
 	  <td class="pub-info">
 		<span class="pub-authors">
-		  <i class="pub-highlight">Dan Lin</i>, Jun Li, Jackson Seminara, Jessica McArt. (2025).
+		  <i class="pub-highlight">Dan Lin</i>, Jun Li*, Jackson Seminara, Jessica McArt*. (2025).
 		</span>
 		<span class="pub-title">Predicting postpartum diseases in Holstein cows using milk spectra and machine learning – retrospective assessment from diagnosis date</span><br>
 		<i class="pub-highlight">Journal of Dairy Science</i>
@@ -111,7 +113,7 @@ dl862@cornell.edu
 	  </td>
 	  <td class="pub-info">
 		<span class="pub-authors">
-		  <i class="pub-highlight">Dan Lin</i>, Ákos Kenéz, Jessica McArt, Jun Li. (2023).
+		  <i class="pub-highlight">Dan Lin</i>, Ákos Kenéz, Jessica McArt*, Jun Li*. (2023).
 		</span>
 		<span class="pub-title">Transformer Neural Network to Predict and Interpret Pregnancy Loss from Activity Data in Holstein Dairy Cows</span><br>
 		<i class="pub-highlight">Computers and Electronics in Agriculture</i>
@@ -125,7 +127,7 @@ dl862@cornell.edu
 	  
 		<p> Expanding AI from single-species tasks to universal multi-species health is the next frontier. To overcome the invasiveness of traditional testing, we combine non-invasive sensing with generative AI and foundation AI. I (co-)developed a chest radiography foundation model for human, a wearable diffusion generative framework for both human and livestock, and a non-invasive fecal microbiome pipeline for domestic mammals, moving beyond simple prediction to data generation and deep disease profiling. Check our key publications:</p>
 
-		<p style="font-size: 0.98em; color: #888; margin-top: -10px; margin-bottom: 18px;">(# equal contribution)</p>
+		<p style="font-size: 0.98em; color: #888; margin-top: -10px; margin-bottom: 18px;">(# equal contribution， * corresponding author)</p>
 	  
 		<table class="pub-table">
 			<tr>
@@ -134,7 +136,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, et al., Ping Luo, Ruijiang Li. (2025).
+					Yuanfeng Ji#, <i class="pub-highlight">Dan Lin#</i>, Xiyue Wang#, et al., Ping Luo*, Ruijiang Li*. (2025).
 				</span>
 				<span class="pub-title">A Generative Foundation Model for Chest Radiography</span><br>
 				<i class="pub-highlight">NEJM AI</i>
@@ -151,7 +153,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					<i class="pub-highlight">Dan Lin#</i>, Erika Ganda, et al., Jessica McArt. (2026).
+					<i class="pub-highlight">Dan Lin*</i>, Erika Ganda, et al., Jessica McArt*. (2026).
 				</span>
 				<span class="pub-title">Toward diseases-associated fecal microbiome signatures for domestic mammals</span><br>
 				<i class="pub-highlight">Communications Biology</i>
@@ -167,7 +169,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li. (2025).
+				  <i class="pub-highlight">Dan Lin#</i>, Yuanfeng Ji#, Jessica McArt, Jun Li*. (2025).
 				</span>
 				<span class="pub-title">SynLS: A novel diffusion-transformer framework for generating high-quality wearable sensor time series data to enhance health monitoring</span><br>
 				<i class="pub-highlight">biorxiv</i>
@@ -182,6 +184,8 @@ dl862@cornell.edu
   
 	<p> Beyond my primary focus, I have contributed to collaborative research applying bioinformatics and AI across diverse domains. These include genomic and microbiome studies on honeybee adaptation and gut health, as well as developing intelligent diagnostic tools for bone age assessment, keratoconus, and fall detection. These projects showcase my ability to leverage computational models to solve varied biological and clinical problems. Check our key publications:</p>
   
+	<p style="font-size: 0.98em; color: #888; margin-top: -10px; margin-bottom: 18px;">(# equal contribution， * corresponding author)</p>
+	  
 	<table class="pub-table">
 		<tr>
 		  <td class="pub-img">
@@ -189,7 +193,7 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-			  <i class="pub-highlight">Dan Lin</i>, Lan Lan, Tingting Zheng, Peng Shi, Jinshan Xu, Jun Li. (2021).
+			  <i class="pub-highlight">Dan Lin#</i>, Lan Lan#, Tingting Zheng, Peng Shi, Jinshan Xu*, Jun Li*. (2021).
 			</span>
 			<span class="pub-title">Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa</span><br>
 			<i class="pub-highlight">Genome Biology and Evolution</i>
@@ -205,7 +209,7 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-				Qiuwen He, Jiating Huang, Tingting Zheng, <i class="pub-highlight">Dan Lin</i>, Heping Zhang, Jun Li, Zhihong Sun. (2021).
+				Qiuwen He#, Jiating Huang#, Tingting Zheng, <i class="pub-highlight">Dan Lin</i>, Heping Zhang, Jun Li*, Zhihong Sun*. (2021).
 			</span>
 			<span class="pub-title">Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</span><br>
 			<i class="pub-highlight">FEMS Microbiology Ecology</i>
@@ -221,7 +225,7 @@ dl862@cornell.edu
 		  </td>
 		  <td class="pub-info">
 			<span class="pub-authors">
-				Kwun Kwan Lo, Junsheng He, <i class="pub-highlight">Dan Lin</i>, et al., Jun Li. (2025).
+				Kwun Kwan Lo#, Junsheng He#, <i class="pub-highlight">Dan Lin</i>, et al., Jun Li*. (2025).
 			</span>
 			<span class="pub-title">Theabrownin-induced Bifidobacterium pseudolongum enrichment mitigates experimental colitis in mice</span><br>
 			<i class="pub-highlight">mSysyems</i>
@@ -237,7 +241,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					<i class="pub-highlight">Dan Lin</i>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou. (2019).
+					<i class="pub-highlight">Dan Lin</i>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou*. (2019).
 				</span>
 				<span class="pub-title">Keratoconus Diagnosis: Validation of a Novel Parameter Set Derived from IOP-Matched Scenario</span><br>
 				<i class="pub-highlight">Journal of Ophthalmology</i>
@@ -253,7 +257,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					Yuanfeng Ji, Hao Chen, <i class="pub-highlight">Dan Lin</i>, Xiaohua Wu, Di Lin. (2019).
+					Yuanfeng Ji, Hao Chen, <i class="pub-highlight">Dan Lin</i>, Xiaohua Wu, Di Lin*. (2019).
 				</span>
 				<span class="pub-title">PRSNet : Part Relation and Selection Network for Bone Age Assessment</span><br>
 				<i class="pub-highlight">MICCAI 2019</i>
@@ -269,7 +273,7 @@ dl862@cornell.edu
 			  </td>
 			  <td class="pub-info">
 				<span class="pub-authors">
-					Shengyun Liang, Tianyue Chu, <i class="pub-highlight">Dan Lin</i>, Yunkun Ning, Huiqi Li, Guoru Zhao. (2018).
+					Shengyun Liang, Tianyue Chu, <i class="pub-highlight">Dan Lin</i>, Yunkun Ning, Huiqi Li, Guoru Zhao*. (2018).
 				</span>
 				<span class="pub-title">Pre-impact Alarm System for Fall Detection Using MEMS Sensors and HMM-based SVM Classifier</span><br>
 				<i class="pub-highlight">In 2018 40th Annual International Conference of the IEEE EMBC</i>
@@ -325,7 +329,7 @@ dl862@cornell.edu
 <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script> -->
 
 <p><center><font>
-        <br>&copy; Dan Lin | Last updated: Oct. 2025</font></center>
+        <br>&copy; Dan Lin | Last updated: Feb. 2026</font></center>
 </p>
 
 </div>
