Update publication statuses and correct journal name

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ dl862@cornell.edu
 				</span>
 				<span class="pub-title">Toward diseases-associated fecal microbiome signatures for domestic mammals</span><br>
 				<i class="pub-highlight">Communications Biology</i>
-				<span class="pub-status">[Under review]</span>
+				<span class="pub-status">[In revision]</span>
 			  </td>
 			</tr>
 		  </table>
@@ -228,7 +228,7 @@ dl862@cornell.edu
 				Kwun Kwan Lo#, Junsheng He#, <i class="pub-highlight">Dan Lin</i>, et al., Jun Li*. (2025).
 			</span>
 			<span class="pub-title">Theabrownin-induced Bifidobacterium pseudolongum enrichment mitigates experimental colitis in mice</span><br>
-			<i class="pub-highlight">mSysyems</i>
+			<i class="pub-highlight">mSystems</i>
 			<span class="pub-status">[Under review]</span>
 		  </td>
 		</tr>
