Remove experiences and honors sections from index.html
Removed sections on experiences and selected honors from the index.html file.

--- a/index.html
+++ b/index.html
@@ -285,25 +285,12 @@ dl862@cornell.edu
 
 <h2><font> Teaching </font></h2>
 <ul class="teaching-list">
+  <li>Cornell CVM MPH6108 (2026) - Lead Mentor, Classroom, 1.45h data lab for master students</li>
   <li>CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Experimental designs', 1h lecture for graduate students</li>
   <li>CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Regression models and machine learning models', 1h lecture for graduate students</li>
   <li>CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Confidence interval and sample size', 2h lecture for undergraduate students</li>
   <li>CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Study design and Literature review', 2h lecture for undergraduate students</li>
   <li>CityUHK VM2100 (2022-2023) - Teaching Assistant, On-Line, 'How comparative genomics and statistical analysis reveal the evolution of Apis laboriosa', 20-min case study for undergraduate students</li>
-</ul>
-
-	<h2><font> Experiences </font></h2>
-<ul class="teaching-list">
-  <li>Visiting PhD student, Cornell University, Feb 2023 – Jun 2023</li>
-  <li>Research Assistant, City University of Hong Kong, Jun 2019 – Aug 2019</li>
-  <li>Visiting undergraduate student, Chinese Academy of Sciences (ShenZhen), Jan 2017 – Nov 2017</li>
-</ul>
-
-<h2><font> Selected Honors </font></h2>
-<ul class="teaching-list">
-  <li>Institutional Research Tuition Scholarship, City University of Hong Kong, 2022</li>
-  <li>Dean's List Award, The Chinese University of Hong Kong, 2019</li>
-  <li>Distinguished Graduate, Shenzhen University, 2018</li>
 </ul>
 
 <h2><font> Professional Memberships </font></h2>
