Update teaching experience details in index.html

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ dl862@cornell.edu
 
 <h2><font> Teaching </font></h2>
 <ul class="teaching-list">
-  <li>Cornell CVM MPH6108 (2026) - Lead Mentor, Classroom, 1.45h data lab for master students</li>
+  <li>Cornell MPH6108 (2026) - Lead Mentor, Classroom, 1.45h x 4 times data lab for graduate students</li>
   <li>CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Experimental designs', 1h lecture for graduate students</li>
   <li>CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Regression models and machine learning models', 1h lecture for graduate students</li>
   <li>CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Confidence interval and sample size', 2h lecture for undergraduate students</li>
